--- a/notebooks/Escola_de_Inverno_2022_PLN_Tarefa_Prática.ipynb
+++ b/notebooks/Escola_de_Inverno_2022_PLN_Tarefa_Prática.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Escola de Inverno - 2022 - PLN - Tarefa Prática.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqxRdjOQYN9iSMQ21XM+MM",
+      "authorship_tag": "ABX9TyNWlDVDqMoyCeHJwAK+iyKF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,7 @@
         "\n",
         "[OpLexicon](https://www.inf.pucrs.br/linatural/wordpress/recursos-e-ferramentas/oplexicon/)\n",
         "\n",
+        "\n",
         "[Corpus](https://www.kaggle.com/code/leandrodoze/sentiment-analysis-in-portuguese/data?select=Tweets_Mg.csv)\n"
       ],
       "metadata": {
@@ -55,12 +56,89 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Colab"
+      ],
+      "metadata": {
+        "id": "_an7oBNkOYrk"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "!wget -q -c https://github.com/H2IA/escola-de-inverno-2022/raw/main/notebooks/Tweets_Mg.csv.zip -O Tweets_Mg.csv.zip"
+      ],
       "metadata": {
         "id": "QqgZYvsbLzvg"
       },
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!unzip -f  Tweets_Mg.csv.zip\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WWbzi_8yOi4z",
+        "outputId": "fb6e0b4f-df38-46ce-9570-a38ad24dec1b"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  Tweets_Mg.csv.zip\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget -q -c https://raw.githubusercontent.com/H2IA/escola-de-inverno-2022/main/notebooks/lexico_v3.0.txt -O lexico.csv"
+      ],
+      "metadata": {
+        "id": "DaS04pcVoXwG"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "dataset = pd.read_csv('Tweets_Mg.csv')"
+      ],
+      "metadata": {
+        "id": "gwfkUXAuOdsX"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lexico = pd.read_csv('lexico.csv')"
+      ],
+      "metadata": {
+        "id": "LqhGAVBzXlRU"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "idRVnbq0X0e-"
+      },
+      "execution_count": 5,
       "outputs": []
     }
   ]
