--- a/notebooks/Escola_de_Inverno_2022_PLN_Tarefa_Prática.ipynb
+++ b/notebooks/Escola_de_Inverno_2022_PLN_Tarefa_Prática.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Escola de Inverno - 2022 - PLN - Tarefa Prática.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyORYXx0KPaYVMSRuGVz0doB",
+      "authorship_tag": "ABX9TyMfl5EyEv+WM/oeNgnnMdLg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -577,7 +577,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Baixando um modelo para Português"
+        "## Baixando um modelo para o Português \n",
+        "Executa mais rapidamente em GPUs"
       ],
       "metadata": {
         "id": "WnVnUM5XsFbd"
